@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.3.0
 
-16 March 2017
+17 March 2017
 
 
 1. Introduction
@@ -22,7 +22,7 @@ The following classes have been renamed:
 - ...
 
 The following methods have been added:
-- ...
+- GCTAResponseIrf::rspname
 
 The following methods have been removed:
 - ...
@@ -130,6 +130,9 @@ None
 20. CTA interface
 -----------------
 Correct the containment radius computation in GCTAPsf2D (#1876).
+
+The GCTAResponseIrf::rspname method has been added that returns the name
+of the response function (attribute m_rspname).
 
 
 21. COMPTEL interface
