@@ -1,8 +1,9 @@
-2017-03-16
+2017-03-17
 
         * Version 1.3.0 released
         =========================
 
+        Add GCTAResponseIrf::rspname() method
         GWcs now supports CD keywords instead of CDELT (#1951)
         Correct GCTAPsf2D containment radius computation (#1876)
         Add GLS and SFL WCS projections (#1851)
